SERVER-12747 Add field to command result _after_ collection is created.

It's possible for Database::createCollection() to throw an exception
after the "createdCollectionAutomatically" field has been added to the
BSONObjBuilder& result object in the "createIndexes" command.